[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/player/ClawArm.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/player_scripts/MeleeAttachment.gd" type="Script" id=2]
[ext_resource path="res://scripts/player_scripts/MeleeHitbox.gd" type="Script" id=3]
[ext_resource path="res://assets/Extras/dummy.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.5, 29.75 )

[sub_resource type="GradientTexture" id=3]

[node name="MeleeAttachment" type="Node2D"]
script = ExtResource( 2 )

[node name="ClawArm" parent="." instance=ExtResource( 1 )]

[node name="restPos" type="Position2D" parent="."]
position = Vector2( 26, -26 )

[node name="targetPos" type="Position2D" parent="."]
position = Vector2( 67, 19 )

[node name="windPos" type="Position2D" parent="."]
position = Vector2( 6, -26 )

[node name="Hitbox" type="KinematicBody2D" parent="." groups=["PDamager"]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="HitDetector" type="CollisionShape2D" parent="Hitbox" groups=["Damager"]]
position = Vector2( -13, -1 )
scale = Vector2( 1.2, 1 )
shape = SubResource( 1 )

[node name="Dummy" type="Sprite" parent="Hitbox/HitDetector"]
visible = false
position = Vector2( -0.833333, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="targetDetection" type="Area2D" parent="."]
visible = false
position = Vector2( 10, -13 )
scale = Vector2( 0.883, 1.275 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="targetDetection"]
position = Vector2( 36.5, 16.25 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="targetDetection/CollisionShape2D"]
position = Vector2( -0.5, -0.749998 )
scale = Vector2( 0.0340576, 57 )
texture = SubResource( 3 )

[connection signal="body_entered" from="targetDetection" to="." method="_on_targetDetection_body_entered"]
